# cursor-subagent-mcp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  errors.rs  health.rs  logging.rs  main.rs  mcp.rs
src/agents/: manager.rs  mod.rs  model.rs  process.rs
src/summarize/: cursor_agent.rs  extractive.rs  llama_cpp.rs  mod.rs  ollama.rs
tests/: mcp_integration.rs
